Ignore private settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # don't track the output dir
 _output/
-
-# repos are automatically cloned, don't track
+# repos are automatically cloned
 repos/
+# settings file is private
+settings.conf
