Commented sample settings file

--- a/settings.conf.sample
+++ b/settings.conf.sample
@@ -1,10 +1,20 @@
+# This is the sample configuration file for Datacentral.
+# Running `make install` will create a copy called `settings.conf` which
+# should be tweaked for your own installation.
+
 [ui]
+# The theme to use. For the moment there's only one.
 theme = centraldedados
 
 [credentials]
+# E-mail to use for the contact form. Uses Formspree.io to send email,
+# see their site to learn how it works.
 contact_email = johndoe@dummydomain.net
 
 [repositories]
+# Place all data package repos, one per line, on this section.
+# We recommend that you use the repo name as the first string before `=`
+# for consistency.
 population = https://github.com/datasets/population.git
 gold-prices = https://github.com/datasets/gold-prices.git
 gdp = https://github.com/datasets/gdp.git
