--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-GitPython==2.1.8
-Jinja2==2.7.2
-Markdown==2.4.1
-MarkupSafe==0.23
-argparse==1.2.1
-click==1.1
-colorlog==2.6.0
-zenlog==1.0
-livereload==2.2.0
-csvkit==0.9.0
+argparse==1.4.0
+
+Click==7.0
+colorlog==4.0.2
+csvkit==1.0.3
+GitPython==2.1.11
+Jinja2==2.10
+livereload==2.6.0
+Markdown==3.0.1
+MarkupSafe==1.1.0
 nose==1.3.7
-requests==2.20.0
+requests==2.21.0
+zenlog==1.1
